--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
     <div class="wrapper">
       <h2>Electrical Engineering Student & Project Leader</h2>
       <p class="lead">Currently studying at the University of Indianapolis, passionate about innovation, teamwork, and real-world engineering solutions.</p>
+      <div class="hero-actions">
+        <a href="Resume.pdf" class="btn-resume" target="_blank">Download Resume</a>
+        <div class="social-icons">
+          <a href="https://github.com/yourusername" target="_blank" aria-label="GitHub">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" />
+          </a>
+          <a href="https://linkedin.com/in/yourusername" target="_blank" aria-label="LinkedIn">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" />
+          </a>
+        </div>
+      </div>
     </div>
   </section>
 
