--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="wrapper">
       <h2>Electrical Engineering Student & Project Leader</h2>
       <p class="lead">Currently studying at the University of Indianapolis, passionate about innovation, teamwork, and real-world engineering solutions.</p>
+
       <div class="hero-actions">
         <a href="Resume.pdf" class="btn-resume" target="_blank">Download Resume</a>
         <div class="social-icons">
@@ -36,6 +37,7 @@
           </a>
         </div>
       </div>
+
     </div>
   </section>
 
@@ -92,8 +94,4 @@
 
   <footer class="footer-alt">
     <div class="wrapper">
-      <p>&copy; 2025 Diego Zuniga</p>
-    </div>
-  </footer>
-</body>
-</html>
+      <p>&copy; 202
