--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
   <header class="alt-navbar">
     <div class="wrapper">
-      <h1 class="brand">Diego Zuniga</h1>
       <nav>
         <ul>
           <li><a href="#about">About</a></li>
@@ -23,8 +22,8 @@
 
   <section class="hero-block">
     <div class="wrapper">
-      <h2>Electrical Engineering Student & Project Leader</h2>
-      <p class="lead">Currently studying at the University of Indianapolis, passionate about innovation, teamwork, and real-world engineering solutions.</p>
+      <h1 class="hero-name">Diego Zuniga</h1>
+      <p class="lead">Electrical Engineering Student at the University of Indianapolis</p>
 
       <div class="hero-actions">
         <a href="Resume.pdf" class="btn-resume" target="_blank">Download Resume</a>
@@ -37,7 +36,6 @@
           </a>
         </div>
       </div>
-
     </div>
   </section>
 
@@ -94,4 +92,8 @@
 
   <footer class="footer-alt">
     <div class="wrapper">
-      <p>&copy; 202
+      <p>&copy; 2025 Diego Zuniga</p>
+    </div>
+  </footer>
+</body>
+</html>
