--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
         <a href="Resume.pdf" class="btn-resume" target="_blank">Download Resume</a>
         <div class="social-icons">
           <a href="https://github.com/yourusername" target="_blank" aria-label="GitHub">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" style="width: 16px; height: 16px;" />
           </a>
           <a href="https://linkedin.com/in/yourusername" target="_blank" aria-label="LinkedIn">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" style="width: 16px; height: 16px;" />
           </a>
         </div>
       </div>
+
     </div>
   </section>
 
