--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <header class="alt-navbar">
     <div class="wrapper">
+      <h1 class="brand">Diego Zuniga</h1>
       <nav>
         <ul>
           <li><a href="#about">About</a></li>
@@ -22,21 +23,20 @@
 
   <section class="hero-block">
     <div class="wrapper">
-      <h1 class="hero-name">Diego Zuniga</h1>
-      <p class="lead">Electrical Engineering Student at the University of Indianapolis</p>
+      <h2>Electrical Engineering Student & Project Leader</h2>
+      <p class="lead">Currently studying at the University of Indianapolis, passionate about innovation, teamwork, and real-world engineering solutions.</p>
 
       <div class="hero-actions">
         <a href="Resume.pdf" class="btn-resume" target="_blank">Download Resume</a>
         <div class="social-icons">
           <a href="https://github.com/yourusername" target="_blank" aria-label="GitHub">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" style="width: 16px; height: 16px;" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" />
           </a>
           <a href="https://linkedin.com/in/yourusername" target="_blank" aria-label="LinkedIn">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" style="width: 16px; height: 16px;" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" />
           </a>
         </div>
       </div>
-
     </div>
   </section>
 
