--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Diego Zuniga | Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="alt-navbar">
@@ -22,15 +22,15 @@
 
   <section class="hero-block">
     <div class="wrapper">
-      <h2>Diego Zuniga</h2>
+      <h1>Diego Zuniga</h1>
       <p class="lead">Electrical Engineering Student | Innovator | Project Leader</p>
       <a href="Resume.pdf" class="btn-resume" target="_blank">Download Resume</a>
       <div class="social-icons">
-        <a href="https://github.com/yourusername" target="_blank" aria-label="GitHub">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" />
+        <a href="https://github.com/yourusername" target="_blank">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
         </a>
-        <a href="https://linkedin.com/in/yourusername" target="_blank" aria-label="LinkedIn">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" />
+        <a href="https://linkedin.com/in/yourusername" target="_blank">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
         </a>
       </div>
     </div>
@@ -94,3 +94,4 @@
   </footer>
 </body>
 </html>
+
