--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="https://github.com/yourusername" target="_blank">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
         </a>
-        <a href="https://linkedin.com/in/yourusername" target="_blank">
+        <a href="https://www.linkedin.com/in/diego-zuniga-" target="_blank">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
         </a>
       </div>
@@ -94,4 +94,3 @@
   </footer>
 </body>
 </html>
-
