--- a/index.html
+++ b/index.html
@@ -39,7 +39,18 @@
   <section id="about" class="section">
     <div class="wrapper">
       <h2>About Me</h2>
-      <p>I am a Bachelor of Science candidate in Electrical Engineering at the University of Indianapolis, graduating in May 2025. I enjoy solving practical problems through engineering design and have a strong foundation in circuit design, project leadership, and collaboration.</p>
+      <p>
+        I am currently a Senior at the University of Indianapolis studying Electrical Engineering. I am a proud member of IEEE.
+      </p>
+      <p>
+        During my time at UIndy, I’ve had the opportunity to gain hands-on experience with circuits, embedded systems, and coding. I’ve worked with tools and languages such as C++, Verilog, FPGA development, and MATLAB.
+      </p>
+      <p>
+        I’ve also collaborated with other engineers on semester-long projects that emphasized real-world problem solving, innovation, and teamwork.
+      </p>
+      <p>
+        I’m passionate about my field and dedicated to turning ideas into reality through technology, design, and engineering.
+      </p>
     </div>
   </section>
 
