--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <section class="hero-block">
     <div class="wrapper">
-      <img src="diego.png" alt="Diego Zuniga" class="profile-img" />
+      <img src="IMG_3646.JPG" alt="Diego Zuniga" class="profile-img" />
       <h1>Diego Zuniga</h1>
       <p class="lead">Electrical Engineering Student | Innovator | Project Leader</p>
       <a href="Resume.pdf" class="btn-resume" target="_blank">Download Resume</a>
