--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
   <section class="hero-block">
     <div class="wrapper">
-      <img src="IMG_3646.JPG" alt="Diego Zuniga" class="profile-img" />
+      <div class="photo-frame">
+        <div class="rotating-ring"></div>
+        <img src="IMG_3646.JPG" alt="Diego Zuniga" class="profile-img" />
+      </div>
       <h1>Diego Zuniga</h1>
       <p class="lead">Electrical Engineering Student | Innovator | Project Leader</p>
       <a href="Resume.pdf" class="btn-resume" target="_blank">Download Resume</a>
