--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Diego Zuniga | Portfolio</title>
+  <title>Diego Zuniga | Home</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -12,14 +12,14 @@
     <div class="wrapper">
       <nav>
         <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
-
   <section class="hero-block">
     <div class="wrapper">
       <div class="photo-frame">
@@ -29,79 +29,8 @@
       <h1>Diego Zuniga</h1>
       <p class="lead">Electrical Engineering Student | Innovator | Project Leader</p>
       <a href="Resume.pdf" class="btn-resume" target="_blank">Download Resume</a>
-      <div class="social-icons">
-        <a href="https://github.com/yourusername" target="_blank">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
-        </a>
-        <a href="https://www.linkedin.com/in/diego-zuniga-" target="_blank">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
-        </a>
-      </div>
     </div>
   </section>
-
-  <section id="about" class="section">
-    <div class="wrapper">
-      <h2>About Me</h2>
-      <p>
-        I am currently a Senior at the University of Indianapolis studying Electrical Engineering. I am a proud member of IEEE.
-      </p>
-      <p>
-        During my time at UIndy, I’ve had the opportunity to gain hands-on experience with circuits, embedded systems, and coding. I’ve worked with tools and languages such as C++, Verilog, FPGA development, and MATLAB.
-      </p>
-      <p>
-        I’ve also collaborated with other engineers on semester-long projects that emphasized real-world problem solving, innovation, and teamwork.
-      </p>
-      <p>
-        I’m passionate about my field and dedicated to turning ideas into reality through technology, design, and engineering.
-      </p>
-    </div>
-  </section>
-
-  <section id="experience" class="section">
-    <div class="wrapper">
-      <h2>Experience</h2>
-      <ul class="timeline">
-        <li>
-          <h3>IEEE Treasurer (2023–Present)</h3>
-          <p>Managed club finances and procurement for IEEE events.</p>
-        </li>
-        <li>
-          <h3>Roche Academy Intern (2024)</h3>
-          <p>Worked with Cobas instruments and Ventana HE600 stainers; contributed to Offsite Implementation Center and Tissue Diagnostics teams.</p>
-        </li>
-        <li>
-          <h3>Body Cam Mount Project (2023–Present)</h3>
-          <p>Interviewed police officers, created weekly documentation, and co-developed business model strategies.</p>
-        </li>
-        <li>
-          <h3>Letterpress Project Manager (2022–2023)</h3>
-          <p>Led a team in developing magnetic letterpress solutions; collaborated with client Katherine Fries and delivered an innovative design for the community.</p>
-        </li>
-      </ul>
-    </div>
-  </section>
-
-  <section id="projects" class="section">
-    <div class="wrapper">
-      <h2>Highlighted Projects</h2>
-      <div class="cards">
-        <div class="card">
-          <h4>Navigation System</h4>
-          <p>Created design tools such as FMEA, Pugh Matrix, QFD; collaborated with teammates to build navigation requirements.</p>
-        </div>
-        <div class="card">
-          <h4>Breaking the X&Y</h4>
-          <p>Innovative magnetic letterpress project that brought modularity to traditional printing processes.</p>
-        </div>
-        <div class="card">
-          <h4>Roche Internship</h4>
-          <p>Participated in technical and networking activities with Cobas and Tissue Diagnostics teams during the summer of 2024.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <footer class="footer-alt">
     <div class="wrapper">
       <p>&copy; 2025 Diego Zuniga</p>
