--- a/about.html
+++ b/about.html
@@ -1,1 +1,32 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About | Diego Zuniga</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header class="alt-navbar">
+    <div class="wrapper">
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <section id="about" class="section">
+    <div class="wrapper">
+      <h2>About Me</h2>
+      <p>I am currently a Senior at the University of Indianapolis studying Electrical Engineering. I am a proud member of IEEE.</p>
+      <p>During my time at UIndy, I’ve had the opportunity to gain hands-on experience with circuits, embedded systems, and coding. I’ve worked with tools and languages such as C++, Verilog, FPGA development, and MATLAB.</p>
+      <p>I’ve also collaborated with other engineers on semester-long projects that emphasized real-world problem solving, innovation, and teamwork.</p>
+      <p>I’m passionate about my field and dedicated to turning ideas into reality through technology, design, and engineering.</p>
+    </div>
+  </section>
+</body>
+</html>
