--- a/work.html
+++ b/work.html
@@ -1,1 +1,65 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Work | Diego Zuniga</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header class="alt-navbar">
+    <div class="wrapper">
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <section id="experience" class="section">
+    <div class="wrapper">
+      <h2>Experience</h2>
+      <ul class="timeline">
+        <li>
+          <h3>IEEE Treasurer (2023–Present)</h3>
+          <p>Managed club finances and procurement for IEEE events.</p>
+        </li>
+        <li>
+          <h3>Roche Academy Intern (2024)</h3>
+          <p>Worked with Cobas instruments and Ventana HE600 stainers; contributed to Offsite Implementation Center and Tissue Diagnostics teams.</p>
+        </li>
+        <li>
+          <h3>Body Cam Mount Project (2023–Present)</h3>
+          <p>Interviewed police officers, created weekly documentation, and co-developed business model strategies.</p>
+        </li>
+        <li>
+          <h3>Letterpress Project Manager (2022–2023)</h3>
+          <p>Led a team in developing magnetic letterpress solutions; collaborated with client Katherine Fries and delivered an innovative design for the community.</p>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section id="projects" class="section">
+    <div class="wrapper">
+      <h2>Highlighted Projects</h2>
+      <div class="cards">
+        <div class="card">
+          <h4>Navigation System</h4>
+          <p>Created design tools such as FMEA, Pugh Matrix, QFD; collaborated with teammates to build navigation requirements.</p>
+        </div>
+        <div class="card">
+          <h4>Breaking the X&Y</h4>
+          <p>Innovative magnetic letterpress project that brought modularity to traditional printing processes.</p>
+        </div>
+        <div class="card">
+          <h4>Roche Internship</h4>
+          <p>Participated in technical and networking activities with Cobas and Tissue Diagnostics teams during the summer of 2024.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
+</html>
