--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,31 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact | Diego Zuniga</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header class="alt-navbar">
+    <div class="wrapper">
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <section class="section">
+    <div class="wrapper">
+      <h2>Contact Me</h2>
+      <p>Email: <a href="mailto:your@email.com">your@email.com</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/diego-zuniga-" target="_blank">/diego-zuniga-</a></p>
+      <p>GitHub: <a href="https://github.com/yourusername" target="_blank">/yourusername</a></p>
+    </div>
+  </section>
+</body>
+</html>
