--- a/contact.html
+++ b/contact.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | Diego Zuniga</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="alt-navbar">
     <div class="wrapper">
+      <h1 class="logo">&gt; Diego</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="work.html">Work</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
+
   <section class="section">
     <div class="wrapper">
-      <h2>Contact Me</h2>
-      <p>Email: <a href="mailto:your@email.com">your@email.com</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/diego-zuniga-" target="_blank">/diego-zuniga-</a></p>
-      <p>GitHub: <a href="https://github.com/yourusername" target="_blank">/yourusername</a></p>
+      <h2>Contact</h2>
+      <p>If you’d like to collaborate, hire me, or just chat about engineering projects, feel free to reach out!</p>
+      <p>Email: <a href="mailto:your.email@example.com" style="color: #3b82f6;">your.email@example.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/diego-zuniga-" target="_blank" style="color: #3b82f6;">linkedin.com/in/diego-zuniga-</a></p>
     </div>
   </section>
 </body>
