--- a/index.html
+++ b/index.html
@@ -48,3 +48,15 @@
   </section>
 </body>
 </html>
+<!-- Stats Section -->
+<div class="hero-stats">
+  <div>
+    <span>2</span>
+    Years of Experience
+  </div>
+  <div>
+    <span>4</span>
+    Projects Completed
+  </div>
+</div>
+
