--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h3>Electrical Engineer</h3>
       <p>I’m a senior EE student at the University of Indianapolis, passionate about design, innovation, and teamwork. Skilled in Verilog, C++, and embedded systems.</p>
       <div class="hero-buttons">
-        <a href="Resume.pdf" class="btn-resume" target="_blank">Download Resume</a>
+        <a href="Resume.pdf" download="Diego_Zuniga_Resume.pdf" class="btn-resume">Download Resume</a>
         <div class="hero-icons">
           <a href="https://github.com/yourusername" target="_blank">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" />
