--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
   <section class="section">
     <div class="wrapper">
       <h2>About Me</h2>
-      <p>I’m a senior Electrical Engineering student at the University of Indianapolis. As a proud member of IEEE, I’ve developed hands-on skills in circuit design, embedded systems, and programming using Verilog, C++, and MATLAB. I thrive in collaborative environments and enjoy solving practical engineering problems that make a real-world impact.</p>
+      <p>I’m a senior Electrical Engineering student at the University of Indianapolis. I’ve developed hands-on skills in circuit design, embedded systems, and programming using Verilog, C++, and MATLAB. I thrive in collaborative environments and enjoy solving practical engineering problems that make a real-world impact.</p>
     </div>
   </section>
 </body>
