--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     body {
       background: linear-gradient(to right, #0f172a, #1e3a8a);
       color: #f8fafc;
+      font-family: 'Inter', sans-serif;
     }
 
     .about-wrapper {
@@ -23,7 +24,7 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      flex: 0 0 180px;
+      flex: 0 0 200px;
     }
 
     .tabs button {
@@ -33,8 +34,14 @@
       border: none;
       border-radius: 6px;
       font-weight: bold;
+      font-size: 1.1rem;
+      text-align: left;
       cursor: pointer;
       transition: background 0.3s, transform 0.2s;
+    }
+
+    .tabs button span {
+      margin-right: 8px;
     }
 
     .tabs button.active {
@@ -47,6 +54,8 @@
       background: rgba(255, 255, 255, 0.05);
       border-radius: 12px;
       min-height: 300px;
+      opacity: 0;
+      animation: fadeIn 0.4s ease-in-out forwards;
     }
 
     .tab-content h3 {
@@ -68,6 +77,17 @@
       text-align: center;
     }
 
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
     @media (max-width: 768px) {
       .about-wrapper {
         flex-direction: column;
@@ -81,6 +101,7 @@
 
       .tabs button {
         flex: 1 1 auto;
+        text-align: center;
       }
     }
   </style>
@@ -106,9 +127,9 @@
       <div class="about-wrapper">
         <!-- Tabs -->
         <div class="tabs">
-          <button class="tab-button active" data-tab="experience">Experience</button>
-          <button class="tab-button" data-tab="education">Education</button>
-          <button class="tab-button" data-tab="skills">Skills</button>
+          <button class="tab-button active" data-tab="experience"><span>💼</span>Experience</button>
+          <button class="tab-button" data-tab="education"><span>🎓</span>Education</button>
+          <button class="tab-button" data-tab="skills"><span>🛠️</span>Skills</button>
         </div>
 
         <!-- Content -->
@@ -143,8 +164,13 @@
       btn.addEventListener('click', () => {
         buttons.forEach(b => b.classList.remove('active'));
         btn.classList.add('active');
-        const tab = btn.dataset.tab;
-        display.innerHTML = content[tab];
+
+        // Animate fade-in
+        display.style.opacity = 0;
+        setTimeout(() => {
+          display.innerHTML = content[btn.dataset.tab];
+          display.style.animation = 'fadeIn 0.4s ease-in-out forwards';
+        }, 200);
       });
     });
   </script>
