--- a/about.html
+++ b/about.html
@@ -123,8 +123,12 @@
 
   <section class="section">
     <div class="wrapper">
-      <h2>About Me</h2>
-      <div class="about-wrapper">
+      <div class="about-header" id="tab-header">
+  <h2>💼 My Experience</h2>
+  <p class="tab-sub">In this section, I’ll share highlights from my work experience and hands-on engineering projects.</p>
+</div>
+
+<div class="about-wrapper">
         <!-- Tabs -->
         <div class="tabs">
           <button class="tab-button active" data-tab="experience"><span>💼</span>Experience</button>
