--- a/about.html
+++ b/about.html
@@ -7,6 +7,19 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    .tab-content {
+  flex: 1;
+  padding: 2rem;
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 12px;
+  min-height: 300px;
+  max-height: 400px; /* LIMIT HEIGHT */
+  overflow-y: auto;  /* ENABLE SCROLL */
+  opacity: 0;
+  animation: fadeIn 0.4s ease-in-out forwards;
+  scroll-behavior: smooth;
+}
+
     .about-header {
   text-align: center;
   margin-bottom: 2rem;
@@ -179,38 +192,36 @@
     <p>The circuit measures very brief (1 to 2 µsec) electrical pulses. These pulses are produced by gamma rays captured by the scintillator and converted into visible light that is subsequently converted into electric pulses picked up by the circuit.</p>
     <p>The pulses are measured and categorized to produce an energy spectrum to make inferences about the gamma-ray source. Improvements are being made to the design of the circuit so that it can be fabricated on a printed circuit board and made available for student use.</p>
 
-    <hr style="margin: 2rem 0; border-color: #3b82f6;" />
-
-    <div style="margin-bottom: 1.5rem;">
+    <div style="text-align: center; margin: 2rem 0 1rem;">
       <h3 style="margin-bottom: 0.5rem;">Team Member, Body Cam Mount</h3>
-      <div style="color: #38bdf8; font-weight: 600;">R.B. Annis School of Engineering (2023 – Current)</div>
-      <ul style="margin-top: 0.5rem; padding-left: 1.2rem;">
-        <li>Interviewed police officers for project information</li>
-        <li>Created weekly documentation slides based on findings</li>
-        <li>Contributed to the Business Model Canvas development</li>
-      </ul>
+      <div style="color: #38bdf8; font-size: 1.1rem; font-weight: 600;">R.B. Annis School of Engineering (2023 – Current)</div>
     </div>
+    <ul style="padding-left: 1.2rem;">
+      <li>Interviewed police officers for project information</li>
+      <li>Created weekly documentation slides based on findings</li>
+      <li>Contributed to the Business Model Canvas development</li>
+    </ul>
 
-    <div style="margin-bottom: 1.5rem;">
+    <div style="text-align: center; margin: 2rem 0 1rem;">
       <h3 style="margin-bottom: 0.5rem;">Project Manager, Breaking the X&Y Letterpress</h3>
-      <div style="color: #38bdf8; font-weight: 600;">R.B. Annis School of Engineering (2022 – 2023)</div>
-      <ul style="margin-top: 0.5rem; padding-left: 1.2rem;">
-        <li>Collaborated with client Katherine Fries throughout the project</li>
-        <li>Led a student team, assigning roles and tasks</li>
-        <li>Engineered a magnetic type solution for modular printing</li>
-        <li>Presented and delivered final results to the client</li>
-      </ul>
+      <div style="color: #38bdf8; font-size: 1.1rem; font-weight: 600;">R.B. Annis School of Engineering (2022 – 2023)</div>
     </div>
+    <ul style="padding-left: 1.2rem;">
+      <li>Collaborated with client Katherine Fries throughout the project</li>
+      <li>Led a student team, assigning roles and tasks</li>
+      <li>Engineered a magnetic type solution for modular printing</li>
+      <li>Presented and delivered final results to the client</li>
+    </ul>
 
-    <div>
+    <div style="text-align: center; margin: 2rem 0 1rem;">
       <h3 style="margin-bottom: 0.5rem;">Team Member, Navigation System Project</h3>
-      <div style="color: #38bdf8; font-weight: 600;">R.B. Annis School of Engineering (2021 – 2022)</div>
-      <ul style="margin-top: 0.5rem; padding-left: 1.2rem;">
-        <li>Produced tools like Pugh Matrices, FMEA/DFMEA, QFD, and more</li>
-        <li>Contributed to requirement generation with weekly meetings</li>
-        <li>Helped develop viable engineering design choices</li>
-      </ul>
+      <div style="color: #38bdf8; font-size: 1.1rem; font-weight: 600;">R.B. Annis School of Engineering (2021 – 2022)</div>
     </div>
+    <ul style="padding-left: 1.2rem;">
+      <li>Produced tools like Pugh Matrices, FMEA/DFMEA, QFD, and more</li>
+      <li>Contributed to requirement generation with weekly meetings</li>
+      <li>Helped develop viable engineering design choices</li>
+    </ul>
   `
 },
     education: {
