--- a/about.html
+++ b/about.html
@@ -248,13 +248,18 @@
           `
         },
         education: {
-          title: '🎓 My Education',
-          desc: 'Details about my academic journey and achievements while pursuing Electrical Engineering.',
-          html: `
-            <h3>University of Indianapolis</h3>
-            <p>Pursuing a Bachelor of Science in Electrical Engineering, graduating May 2025. Courses have included embedded systems, circuit analysis, microcontrollers, and digital design. Member of IEEE and actively involved in hands-on engineering projects every semester.</p>
-          `
-        },
+  title: '🎓 My Education',
+  desc: 'Details about my academic journey and achievements while pursuing Electrical Engineering.',
+  html: `
+    <h3>University of Indianapolis</h3>
+    <p>
+      Bachelor of Science, major in Electrical Engineering (expected May 2025)<br>
+      Minor: Mathematics<br>
+      Location: Indianapolis, IN<br>
+      GPA: <strong>3.28</strong>
+    </p>
+  `
+},
         skills: {
           title: '🛠️ My Skills',
           desc: 'A quick look at my technical abilities and soft skills that empower my engineering work.',
