--- a/about.html
+++ b/about.html
@@ -281,7 +281,7 @@
     </p>
   `
 },
-       skills: {
+    skills: {
   title: '🛠️ My Skills',
   desc: 'A quick look at my technical abilities and soft skills that empower my engineering work.',
   html: `
@@ -297,9 +297,11 @@
       <div class="skill"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="Docs" /> Technical Documentation</div>
       <div class="skill"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/trello/trello-plain.svg" alt="PM" /> Project Management</div>
       <div class="skill"><img src="https://cdn-icons-png.flaticon.com/512/1946/1946488.png" alt="Soldering" /> Soldering</div>
+      <div class="skill"><img src="https://static.thenounproject.com/png/3521806-200.png" alt="OrCAD" /> OrCAD PCB Design</div>
     </div>
   `
 }
+
       };
 
       buttons.forEach(btn => {
